--- a/applications/docfind/sun38.tex
+++ b/applications/docfind/sun38.tex
@@ -1,241 +1,31 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
+
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {38.8}
-\newcommand{\stardocauthors}   {M.\, J.\, Bly \& P.\, M.\, Allan}
-\newcommand{\stardocdate}      {26 November 1996}
-\newcommand{\stardoctitle}     {DOCFIND --- Starlink document index searching}
-\newcommand{\stardocversion}   {[software-version]}
-\newcommand{\stardocmanual}    {[manual-type]}
-\newcommand{\stardocabstract}  {[Text of abstract]}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {38.8}
+\stardocauthors     {M.\, J.\, Bly \& P.\, M.\, Allan}
+\stardocdate        {26 November 1996}
+\stardoctitle       {DOCFIND --- Starlink document index searching}
+\stardocversion     {1.3}
+\stardocmanual      {Users' Manual}
+\stardocabstract    {This document explains how to search the Starlink documentation
+using the \texttt{docfind} command.}
+\stardoccopyright{Copyright \copyright\ 1996 Particle Physics and Astronomy Research Council}
 % ? End of document identification
 
 % -----------------------------------------------------------------------------
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-% \renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\LARGE\bf  \stardoctitle \\ [2.5ex]}
-%  {\LARGE\bf \stardocversion \\ [4ex]}
-%  {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
 
-% ? Heading for abstract if used.
-%  \vspace{10mm}
-%  \begin{center}
-%     {\Large\bf Abstract}
-%  \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
 %  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-%     \stardocversion\\
-%     \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-% \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-% \stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-% \newpage
-% \begin{latexonly}
-%   \setlength{\parskip}{0mm}
-%   \latexonlytoc
-%   \setlength{\parskip}{\medskipamount}
-%   \markright{\stardocname}
-% \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-% \newpage
-% \renewcommand{\thepage}{\arabic{page}}
-% \setcounter{page}{1}
-
 
 \section{Introduction}
 
@@ -246,47 +36,45 @@ sites.  It is often extremely difficult to find out which document
 should be consulted about a particular topic.
 
 Starlink maintains a list of currently valid project wide documents
-called `STARLINK DOCUMENTATION' in the file {\tt{/star/docs/docs\_lis}}.
+called `STARLINK DOCUMENTATION' in the file {\texttt{/star/docs/docs\_lis}}.
 This may be printed if required.  It is maintained at RAL by the
 Starlink Software Librarian and updated at other sites by the Starlink
 software update process.  The current date is stated at the beginning of
 the file so you can see if your site is up to date by comparing your
 site's file with the RAL file available via the WWW.
 
-An alternative approach is to consult file {\tt{/star/docs/subject\_lis}}.
+An alternative approach is to consult file {\texttt{/star/docs/subject\_lis}}.
 This is a Key-Word index to Starlink documentation which does not rely
 only on document titles.  Once again, it is maintained up to date at RAL
 but other sites may lag behind.  The specified current date will tell all.
-{\tt{/star/docs/analysis\_lis}} is also centrally maintained.  This is a
+{\texttt{/star/docs/analysis\_lis}} is also centrally maintained.  This is a
 list of the Starlink documents listed by which Software item is the main
 subject of each document.
 
-The {\tt{docfind}} program has been developed to help users search this
+The {\texttt{docfind}} program has been developed to help users search this
 mass of information.
 
 \section{Use}
 
-The {\tt{docfind}} procedure searches the file {\tt{/star/docs/subject\_lis}}
-for a given key word and then searches the file {\tt{/star/docs/docs\_lis}}
+The {\texttt{docfind}} procedure searches the file {\texttt{/star/docs/subject\_lis}}
+for a given key word and then searches the file {\texttt{/star/docs/docs\_lis}}
 for the same key word in the titles of the Starlink documents.  This
 technique is used since not all key words will appear in the titles of the
 documents.
 
-To invoke {\tt{docfind}} simply type:
-\begin{quote}
-\begin{verbatim}
+To invoke {\texttt{docfind}} simply type:
+\begin{terminalv}
 % docfind word
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
-A search is executed for occurrences of {\tt{word}} in the files, and the
+A search is executed for occurrences of {\texttt{word}} in the files, and the
 results of the search stored in a temporary file.  This is then displayed
-using the Unix {\tt{more}} command.  The temporary file is deleted one the
-{\tt{more}} output is finished.
+using the Unix {\texttt{more}} command.  The temporary file is deleted one the
+{\texttt{more}} output is finished.
 
 \section{\xlabel{alternative_searching_utilities}\label{alternative_searching_utilities}Alternative searching utilities}
 
-The {\tt{docfind}} command is rather limited in what it can search,
+The {\texttt{docfind}} command is rather limited in what it can search,
 particularly with the advent of hypertext versions of documentation and
 the use of the WWW and WWW browsers to provide cross-referenced
 information about software.
@@ -296,10 +84,10 @@ powerful search and display `engines' to make searching for and
 displaying information easier.  Both use hypertext browsers for
 display.
 
-The first tool is the \xref{{\tt{findme}}}{sun188}{performing_keyword_searches}
+The first tool is the \xref{{\texttt{findme}}}{sun188}{performing_keyword_searches}
 command, which may be used to search for information within documents.
 
-The second is the \xref{{\tt{showme}}}{sun188}{displaying_documents_by_name}
+The second is the \xref{{\texttt{showme}}}{sun188}{displaying_documents_by_name}
 command, which may be used to display a specific document.
 
 Full details of the HTX utilities can be found in \xref{SUN/188}{sun188}{}.
